--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE>
 <html>
 <head>
-		<link type="text/css"; rel="stylesheet"; href="stylesheet.css" />
-		<script type="text/javascript"; src="jquery-2.1.1.js"></script>
-		<link href="css/ui-lightness/jquery-ui-1.10.2.custom.css" rel="stylesheet">
-		<script src="js/jquery-1.9.1.js"></script>
-		<script src="js/jquery-ui-1.10.2.custom.js"></script>
-	<title></title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    <script type="text/javascript" src="jquery-2.1.1.js"></script>
+    <link href="css/ui-lightness/jquery-ui-1.10.2.custom.css" rel="stylesheet">
+    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/jquery-ui-1.10.2.custom.js"></script>
+    <title></title>
 </head>
-<body id="body" >
-	<div class="area" id="area">
-		<div id = "player" class="player"></div>
+<body id="body">
+<div class="area" id="area">
+    <div id="player" class="player"></div>
 
-	</div>
-	<canvas id="myCanvas" ></canvas> 
-	<canvas id="imgCanvas" ></canvas> 
-	<canvas id="myCanvasPart"  onmousemove="getPos(event)"> </canvas>
+</div>
+<canvas id="myCanvas"></canvas>
+<canvas id="imgCanvas"></canvas>
+<canvas id="myCanvasPart" onmousemove="getPos(event);"></canvas>
 </body>
 
-     <script type="text/javascript"; src="particlesGenerator.js"></script>
-        <script type="text/javascript"; src="New.js"></script>
-        <script type="text/javascript"; src="canvas.js"></script>
-		<script type="text/javascript"; src="map.js"></script>
-		<script type="text/javascript"; src="console.js"></script>
+<script type="text/javascript" src="particlesGenerator.js"></script>
+<script type="text/javascript" src="New.js"></script>
+<script type="text/javascript" src="canvas.js"></script>
+<script type="text/javascript" src="map.js"></script>
+<script type="text/javascript" src="console.js"></script>
 
-		<script type="text/javascript"; src="test.js"></script>
+<script type="text/javascript" src="test.js"></script>
 
 
 </html>
